<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreenLight</string>
    <string name="title_room_detail">Room Detail</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="network_error">Error Connecting to Server</string>
    <string name="retry">Retry</string>
    <string name="proximityuuid">67726565-6E6C-6967-6874-000000000001</string>

    <string name="login_settings_category">Login Settings</string>
    <string name="login_settings">Update Settings</string>
    <string name="login_settings_summary">Update login settings</string>
    
    <string name="pref_update_setting">General Settings</string>
    <string name="pref_locator_summary">Uses bluetooth to locate nearby switches for control</string>
    <string name="pref_locator">Locate nearby switches?</string>
    
        <string name="update">Update</string>
        <string name="cancel">Cancel</string>
        
</resources>
