<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" 
    android:padding="15dp">

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" 
        android:textColor="#ff0000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:minHeight="10dp"/>
    
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:minHeight="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:minHeight="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button" 
            android:onClick="onSubmitClick"/>
    </LinearLayout>

</LinearLayout>
